# body-tracking

./: READEME.md  pyproject.toml  requirements.txt
src/: test_osc_listener.py
src/body_tracking/: __init__.py  cli.py  config.py  osc_server.py  tracking.py
tests/: test_cli.py  test_osc_server.py  test_tracking.py
